--- a/css/styles.scss
+++ b/css/styles.scss
@@ -43,7 +43,7 @@ header{
     width:100%;   
     background-color:white;
     z-index:3;
-    padding: 1rem;
+    padding: 2rem 1.5rem 1rem 1.5rem;
     .container{
         margin: 0 auto 0 auto;
         display: flex;
@@ -108,18 +108,17 @@ header{
                         }
                     }
                 }
-
             }
-            
         }
     }
     
 }
-
+.shadow{
+    box-shadow: 0 0 8px rgb(224, 224, 224);
+}
 .intro{
     height: calc(100vh - 5rem);
-    padding-left:1rem;
-    padding-bottom:1rem;
+    margin: 0 2rem;
     display:flex;
     flex-direction:column;
     justify-content: center;
@@ -132,23 +131,21 @@ header{
         color:var(--hover);
     }
 }
-
 .about{
     font-family: 'Inter', sans-serif;
-    padding:5rem 1rem 0 1rem;
+    padding:6rem 1.5rem 0 1.5rem;
     h2{
-        margin-bottom:1rem;
+        margin-bottom:2rem;
     }
     p{
-        margin-top:0.4rem;
-        padding:0.5rem;
+        margin-top:1rem;
         font-size:1.1rem;
     }
 }
 
 .projects{
     font-family: 'Lato', sans-serif;
-    padding:5rem 1rem 2rem 1rem;
+    padding:6rem 1.5rem;
     .container{
         h2{
             margin-bottom:2rem;
@@ -185,6 +182,7 @@ header{
                             display:flex;
                             img{
                                 width:15px;
+                                height:15px;
                                 padding-right:2px;
                             }
                         }
@@ -197,6 +195,8 @@ header{
                     overflow: hidden;
                     max-width:400px;
                     border-radius: 5px;
+                    box-shadow: 4px 4px 15px rgba(29, 53, 62, 0.2);;
+                    transition: 0.5s ease-out;
                     img{
                         width:100%;  
                         height:100%;
@@ -207,7 +207,7 @@ header{
                         top:0;
                         width:100%;
                         height:100%;
-                        background-color: rgba(0,0,0,0.4);
+                        background-color: rgba(0,0,0,0.5);
                         display:flex;
                         justify-content: center;
                         align-items: center;
@@ -227,21 +227,24 @@ header{
                             color:var(--hover);
                         }
                     }
+                    &:hover{
+                        transform: scale(1.03);
+                        box-shadow: 5px 5px 15px rgba(29, 53, 62, 0.3);;
+                    }
                     &:hover .project-links{
                         clip-path: circle(100%);
                     }
                 }
             }
         }
-    }
-    
+    }   
 } 
 
 .contact{
     background-color:var(--light-bgr);
     text-align:center;
     font-family: 'Inter', sans-serif;
-    padding: 4rem 1rem 3rem 1rem;
+    padding: 4rem 1.5rem 3rem 1.5rem;
     .container{
         max-width:360px;
         margin:0 auto 0 auto;
@@ -276,14 +279,12 @@ footer{
     background-color: var(--light-bgr);
     text-align:center;
     padding-bottom:1rem;
-    font-family: 'montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 @media (min-width:760px){
-
     .container{
-        max-width:unset;
-        width:100%;
+        max-width: 800px;
     }
     header{
         .container{
@@ -336,14 +337,16 @@ footer{
         }
     }
     .intro{
-        padding-left:15%;
+        .container{
+            width:100%;
+            padding-left: 15%;
+        }
     }
     .projects{
-       padding-bottom:3rem;
         .container{
             .projects-container{
                 .project-container{
-                    margin-bottom: 2rem;
+                    margin-bottom: 4rem;
                     display:grid;
                     grid-template-columns: repeat(10, 1fr);
                     .text{
@@ -359,7 +362,6 @@ footer{
                             width:80%;
                             text-align:center; 
                             font-size:1.5rem; 
-                            
                         }
                         .technologies{
                             width:80%;
@@ -401,30 +403,32 @@ footer{
 
 @media (min-width:1024px){
     .container{
-        max-width:1200px;
+        max-width:1100px;
     }
     h2{
         font-size:1.8rem;
     }
     header{
-        font-size:1.3rem;
+        padding: 1rem 3rem;
+        font-size:1.2rem;
         .logo a{
             font-size:2rem;
         }
         .container .navbar nav ul li .button{
-                                        font-size:1.35rem;
-                                     }
+            font-size:1.35rem;
+        }
     }
     .intro{
+        
         h1{
-            font-size:4.5rem;
+            font-size:4rem;
         }
         h2{
-            font-size:2.5rem;
+            font-size:2rem;
         }
-        padding-left:20%;
     }
     .projects{
+        padding:6rem 3rem;
         .container{
             .projects-container{
                 .project-container{
@@ -442,6 +446,7 @@ footer{
                             font-size:0.9rem;
                             img{
                                 width:18px;
+                                height:18px;
                             }
                         }
                     
@@ -451,9 +456,11 @@ footer{
                         .project-links{
                             a.github svg{
                                 width:40px;
+                                height:40px;
                             }
                             a.external-link svg{
-                                height:80px;
+                                width:30px;
+                                height:40px;
                             }
                         }                        
                     }
@@ -462,20 +469,21 @@ footer{
         }
     }  
     .about{
+        padding:6rem 3rem 2rem 3rem;
         p{ 
             font-size:1.15rem;
         }
     }
     .contact{
         .container ul li a svg{ 
-                                width:40px;
-                            }
+            width:40px;
+        }
     }
 }
 
 @media (min-width:2500px){
     .container{
-        max-width:1800px;
+        max-width:1600px;
         h2{
             font-size:2.3rem;
         }
@@ -500,7 +508,6 @@ footer{
         h2{
             font-size:3rem;
         }
-        padding-left:25%;
     }
     .projects{
         .container{
@@ -508,7 +515,6 @@ footer{
                 text-align: center;
                 margin-bottom:3rem;
             }
-            max-width:1600px;
             .projects-container{
                 .project-container{
                     .text{
